--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "description": "Учебный демо-проект «Менеджер задач» от HTML Academy",
   "scripts": {
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "build": "webpack --mode production"
   },
   "devDependencies": {
     "copy-webpack-plugin": "11.0.0",
